# ai_developer_test_SFLOW

florian/: .gitignore  README.md  cli.py  config.py  models.py  pipeline.py  pyproject.toml
florian/evaluate/: evaluator.py  test_cases.py
florian/generate/: llm.py  prompt.py
florian/index/: bm25_store.py  embeddings.py  vector_store.py
florian/ingest/: chunker.py  loader.py  metadata.py
florian/retrieve/: hybrid.py  reranker.py
florian/tests/: helpers.py  test_bm25.py  test_chunker.py  test_config.py  test_embeddings.py  test_hybrid.py  test_integration.py  test_llm.py  test_loader.py  test_metadata.py  test_prompt.py  test_reranker.py  test_vector_store.py
